// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/MenuButtons <Publish> matches the snapshot for an error 1`] = `
<div
  class="menuButtonsPublishUpload"
  data-testid="MenuButtonsPublish-container"
>
  <div
    class="menuButtonsPublishUploadTop"
  >
    <div
      class="menuButtonsPublishUploadTitle"
    >
      Publishing profile…
    </div>
    <div
      class="menuButtonsPublishUploadPercentage"
    >
      0%
    </div>
    <div
      class="menuButtonsPublishUploadBar"
    >
      <div
        class="menuButtonsPublishUploadBarInner"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="menuButtonsPublishButtons"
  >
    <button
      class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
      type="button"
    >
      Compressing…
    </button>
    <button
      class="photon-button photon-button-default menuButtonsPublishButton menuButtonsPublishButtonsCancelUpload"
      type="button"
    >
      Cancel Upload
    </button>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the closed state 1`] = `
<div>
  <div
    class="buttonWithPanel menuButtonsMetaInfoButton"
  >
    <div
      class="buttonWithPanelButtonWrapper"
    >
      <input
        class="buttonWithPanelButton menuButtonsMetaInfoButtonButton"
        type="button"
        value="Firefox () "
      />
    </div>
    <div
      class="arrowPanelAnchor"
    >
      <div
        class="arrowPanel arrowPanelOpenMetaInfo"
      >
        <div
          class="arrowPanelArrow"
        />
      </div>
    </div>
  </div>
  <div
    class="menuButtons"
  >
    <div
      class="buttonWithPanel menuButtonsShareButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsShareButtonButton"
          type="button"
          value="Publish…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel menuButtonsPublishPanel"
        >
          <div
            class="arrowPanelArrow"
          />
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs
      <i
        class="open-in-new"
      />
    </a>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the completed upload panel 1`] = `
<div
  class="menuButtonsPublishUpload"
  data-testid="MenuButtonsPublish-container"
>
  <div
    class="menuButtonsPublishUploadTop"
  >
    <div
      class="menuButtonsPublishUploadTitle"
    >
      Publishing profile…
    </div>
    <div
      class="menuButtonsPublishUploadPercentage"
    >
      0%
    </div>
    <div
      class="menuButtonsPublishUploadBar"
    >
      <div
        class="menuButtonsPublishUploadBarInner"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="menuButtonsPublishButtons"
  >
    <button
      class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
      type="button"
    >
      Compressing…
    </button>
    <button
      class="photon-button photon-button-default menuButtonsPublishButton menuButtonsPublishButtonsCancelUpload"
      type="button"
    >
      Cancel Upload
    </button>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the opened panel for a nightly profile 1`] = `
<div
  data-testid="MenuButtonsPublish-container"
>
  <form
    class="menuButtonsPublishContent"
  >
    <div
      class="menuButtonsPublishIcon"
    />
    <p
      class="menuButtonsPublishInfoDescription"
    >
      You’re about to publicly share your profile, which can potentially contain personally identifiable information.
    </p>
    <label
      class="photon-label"
    >
      <input
        class="photon-checkbox photon-checkbox-default"
        name="isFiltering"
        type="checkbox"
      />
      Filter out potentially identifying information
    </label>
    <div
      class="menuButtonsPublishButtons"
    >
      <button
        class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
        type="button"
      >
        Compressing…
      </button>
      <button
        class="photon-button photon-button-primary menuButtonsPublishButton menuButtonsPublishButtonsUpload"
        type="submit"
      >
        <span
          class="menuButtonsPublishButtonsSvg menuButtonsPublishButtonsSvgUpload"
        />
        Publish
      </button>
    </div>
  </form>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the opened panel for a release profile 1`] = `
<div
  data-testid="MenuButtonsPublish-container"
>
  <form
    class="menuButtonsPublishContent"
  >
    <div
      class="menuButtonsPublishIcon"
    />
    <p
      class="menuButtonsPublishInfoDescription"
    >
      You’re about to publicly share your profile, which can potentially contain personally identifiable information.
    </p>
    <label
      class="photon-label"
    >
      <input
        checked=""
        class="photon-checkbox photon-checkbox-default"
        name="isFiltering"
        type="checkbox"
      />
      Filter out potentially identifying information
    </label>
    <details
      class="menuButtonsPublishData"
    >
      <summary
        class="menuButtonsPublishDataSummary"
      >
        Choose what gets removed
      </summary>
      <div
        class="menuButtonsPublishDataChoices"
      >
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            name="removeHiddenThreads"
            type="checkbox"
          />
          Remove hidden threads
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            name="removeFullTimeRange"
            type="checkbox"
          />
          Remove hidden time range
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            name="removeScreenshots"
            type="checkbox"
          />
          Remove screenshots
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            name="removeUrls"
            type="checkbox"
          />
          Remove resource URLs
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            name="removeExtension"
            type="checkbox"
          />
          Remove extension information
        </label>
      </div>
    </details>
    <div
      class="menuButtonsPublishButtons"
    >
      <button
        class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
        type="button"
      >
        Compressing…
      </button>
      <button
        class="photon-button photon-button-primary menuButtonsPublishButton menuButtonsPublishButtonsUpload"
        type="submit"
      >
        <span
          class="menuButtonsPublishButtonsSvg menuButtonsPublishButtonsSvgUpload"
        />
        Publish
      </button>
    </div>
  </form>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the uploading panel 1`] = `
<div
  class="menuButtonsPublishUpload"
  data-testid="MenuButtonsPublish-container"
>
  <div
    class="menuButtonsPublishUploadTop"
  >
    <div
      class="menuButtonsPublishUploadTitle"
    >
      Publishing profile…
    </div>
    <div
      class="menuButtonsPublishUploadPercentage"
    >
      0%
    </div>
    <div
      class="menuButtonsPublishUploadBar"
    >
      <div
        class="menuButtonsPublishUploadBarInner"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="menuButtonsPublishButtons"
  >
    <button
      class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
      type="button"
    >
      Compressing…
    </button>
    <button
      class="photon-button photon-button-default menuButtonsPublishButton menuButtonsPublishButtonsCancelUpload"
      type="button"
    >
      Cancel Upload
    </button>
  </div>
</div>
`;
